--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,36 +1,39 @@
 name: GeoIntel Otomatik Test
 
-# Ne zaman çalışsın? -> main dalına kod atılınca
 on:
   push:
     branches: [ "main" ]
 
 jobs:
   test-yap:
-    runs-on: ubuntu-latest # Robot Ubuntu kullansın
+    runs-on: ubuntu-latest
+
+    # YENİ BÖLÜM: SAHTE ANAHTARLAR (Test sırasında Pydantic patlamasın diye)
+    env:
+      DATABASE_URL: "postgresql://user:pass@localhost:5432/testdb"
+      OPENWEATHER_API_KEY: "test_key"
+      HERE_API_KEY: "test_key"
+      GOOGLE_MAPS_API_KEY: "test_key"
 
     steps:
-    # 1. Adım: Senin kodunu GitHub'dan çeksin
     - uses: actions/checkout@v3
 
-    # 2. Adım: Python 3.11 kursun
     - name: Python Kuruluyor
       uses: actions/setup-python@v4
       with:
         python-version: "3.11"
 
-    # 3. Adım: Gerekli kütüphaneleri yüklesin
     - name: Kütüphaneler Yükleniyor
       run: |
         python -m pip install --upgrade pip
-        # Test araçlarını ve projenin ihtiyaçlarını yükle
-        pip install pytest httpx asyncpg pydantic fastapi uvicorn polyline
+        pip install pytest httpx asyncpg pydantic pydantic-settings fastapi uvicorn polyline loguru
 
-    # 4. Adım: Python'a "Dosyalarım burada" desin (Path ayarı)
+    # KRİTİK DÜZELTME BURADA:
+    # PYTHONPATH'e alt klasörleri de ekliyoruz ki 'import config' çalışsın.
     - name: Yollar Tanımlanıyor
-      run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)" >> $GITHUB_ENV
+      run: |
+        echo "PYTHONPATH=$PYTHONPATH:$(pwd):$(pwd)/services/mcp_city" >> $GITHUB_ENV
 
-    # 5. Adım: Testleri çalıştırsın!
     - name: Testler Çalışıyor
       run: |
         pytest tests/
