--- a/services/orchestrator/requirements.txt
+++ b/services/orchestrator/requirements.txt
@@ -1,10 +1,7 @@
 fastapi>=0.109.0
 uvicorn[standard]>=0.27.0
-langgraph>=0.0.20
-langchain-anthropic>=0.1.0
-langchain-core>=0.1.0
-langchain-openai>=0.0.5
-asyncpg>=0.29.0
 httpx>=0.26.0
 pydantic-settings>=2.1.0
-python-dotenv>=1.0.0
+loguru>=0.7.0
+langchain-anthropic>=0.1.1
+langgraph>=0.0.10
