feat(orchestrator): Modüler Mimarisi, Hafıza Entegrasyonu ve Dinamik Prompt Zekası 🧠🚀
Orchestrator servisi monolitik yapıdan kurtarılarak modüler hale getirildi ve sisteme bağlam duyarlı (context-aware) zeka eklendi.

Yapılan Değişiklikler:
✅ [Refactor] main.py parçalandı:
  - 	ools.py: Tüm araç tanımları (City + Intel + Memory) buraya taşındı.
  - prompt_manager.py: System prompt yönetimi ve niyet analizi (Intent Detection) buraya alındı.
  - main.py: Sadece API ve LangGraph akışını yönetecek şekilde sadeleştirildi.

✅ [Feature] Dinamik Prompt Enjeksiyonu:
  - Kullanıcının mesajına göre (Benzin, Maç, Eczane) prompt'a anlık özel kurallar enjekte eden yapı kuruldu.
  - Coğrafi mantık hatası (Ters yönde yakıt önerme) prompt engineering ile düzeltildi.

✅ [Feature] Hafıza (Memory) Entegrasyonu:
  - ProfileManager ile kullanıcı verileri (Takım, Yakıt Tipi, Ev) PostgreSQL'den çekilip LLM'e context olarak verilmeye başlandı.
  - Veritabanı bağlantı ayarları ve kullanıcı yetkileri (geo_user) düzeltildi.

✅ [Fix] Docker & Config:
  - 	zdata paketi eklenerek zaman dilimi hatası giderildi.
  - Docker-compose healthcheck ve env ayarları güncellendi.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,13 +78,19 @@ services:
     networks:
       - geo_net
 
-  # 6. İSTİHBARAT AJANI (MCP INTEL - İleride kodlayacağız)
+  # 6. İSTİHBARAT AJANI (MCP INTEL)
   mcp_intel:
-    image: python:3.11-slim
+    build: 
+      context: ./services/mcp_intel
+      dockerfile: Dockerfile
     container_name: geo_mcp_intel
-    command: tail -f /dev/null
+    ports:
+      - "8001:8001" # Dışarıdan test etmek istersen diye
     networks:
       - geo_net
+
+
+  # 6. arayüz AJANI
   geo_dashboard:
     build: ./services/dashboard
     container_name: geo_dashboard
