--- a/services/orchestrator/requirements.txt
+++ b/services/orchestrator/requirements.txt
@@ -4,6 +4,7 @@ httpx>=0.26.0
 pydantic-settings>=2.1.0
 loguru>=0.7.0
 langchain-anthropic>=0.1.1
+langchain-google-genai>=0.1.0
 langgraph>=0.0.10
 redis>=4.5.0
 flexpolyline>=0.1.0 
